--- a/templates/default/dhcpd.conf.erb
+++ b/templates/default/dhcpd.conf.erb
@@ -1,18 +1,23 @@
 # File managed by Chef
 
-<% @allows.each do |allow| -%>
-allow <%= allow %>;
+<% if not @allows.empty? -%>
+  <% @allows.each do |allow| -%>
+  allow <%= allow %>;
+  <% end -%>
 <% end -%>
 
-<% @parameters.each do |parameter| -%>
-<%= parameter %>;
+<% if not @parameters.empty? -%>
+  <% @parameters.each do |parameter| -%>
+  <%= parameter %>;
+  <% end -%>
 <% end -%>
 
-<% @options.each do |option| -%>
-option <%= option %>;
+<% if not @options.empty? -%>
+  <% @options.each do |option| -%>
+  option <%= option %>;
+  <% end -%>
 <% end -%>
 
 include "/etc/dhcp3/groups.d/group_list.conf";
 include "/etc/dhcp3/subnets.d/subnet_list.conf";
 include "/etc/dhcp3/hosts.d/host_list.conf";
-
