Template Chef 11 compatibility.

--- a/templates/default/subnet.conf.erb
+++ b/templates/default/subnet.conf.erb
@@ -3,7 +3,7 @@
 subnet <%= @subnet %> netmask <%= @netmask%> {
 range 
 <% if not @routers.empty? -%>
-  option routers <%= @routers.collect! {|i| "#{i}" }.join(",") %>;
+  option routers <%= @routers.collect {|i| "#{i}" }.join(",") %>;
 <% end -%>
   option subnet-mask <%= @netmask %>;
   option broadcast-address <%= @broadcast %>;
